src/yini_test/cases/golden/lenient/valid/sections/section-no-space-before-name.yini
@yini

^SectionName
name = "section-no-space-before-name"
enabled = true
