src/yini_test/cases/golden/lenient/invalid/syntax/unexpected-token.yini
@yini

^ Syntax
name = "before unexpected token"
!
